tests/negative/parser_bad5.sp
(* Bad unary operator usage *)

main : Int() {
	example = 1 !true;
	return 0;
}
